# Proto

./: .gitignore  CMakeLists.txt  GeneratePCProjects.bat  GeneratePS4Projects.bat  GeneratePSVitaProjects.bat
Applications/: CMakeLists.txt
Applications/DataStructures/: CMakeLists.txt  main.cpp
Applications/GeneticRendering/: CMakeLists.txt  GAScene.cpp  GAScene.h  main.cpp
Applications/MemManager/: CMakeLists.txt  Classes.h  main.cpp
Applications/PathTracer/: CMakeLists.txt  PathTracer.cpp  PathTracer.h  main.cpp
Applications/Rasterizer/: CMakeLists.txt  Rasterizer.h  main.cpp
Applications/RayMarcher/: CMakeLists.txt  RayMarcher.cpp  RayMarcher.h  main.cpp
Applications/RayTracer/: CMakeLists.txt  RayTracer.cpp  RayTracer.h  main.cpp
Applications/Renderer/: CMakeLists.txt  GenerateGeometry.cpp  GenerateGeometry.h  Renderer.cpp  Renderer.h  ResourceLoading.cpp  ResourceLoading.h  main.cpp
Applications/Rendering/: CMakeLists.txt  SimpleScene.cpp  SimpleScene.h  main.cpp
Applications/TempDX12Renderer/: CMakeLists.txt  DX12Includes.h  main.cpp
Applications/TempRenderer/: CMakeLists.txt  Mesh.h  RenderPass.cpp  RenderPass.h  RenderTechnique.cpp  RenderTechnique.h  Renderer.cpp  Renderer.h  RenderingTechnique.cpp  RenderingTechnique.h  SimpleScene.cpp  SimpleScene.h  main.cpp
Applications/TempRenderer/RenderPasses/: OpaqueRenderPass.cpp  OpaqueRenderPass.h
Applications/TempRenderer/Resources/: BaseLoader.cpp  BaseLoader.h  ILoader.h  LoadResources.cpp  LoadResources.h  Resource.h  ResourceID.h  ResourceManager.cpp  ResourceManager.h
Applications/TempRenderer/Resources/Helpers/: GenerateResourceID.h  GetInvalidResourceID.h  generateresourceid.cpp  loadparameters.h
Applications/TempRenderer/Resources/Loaders/: ModelLoader.cpp  ModelLoader.h  ShaderLoader.cpp  ShaderLoader.h
Applications/TempRenderer/Resources/Resources/: ModelResource.h  ShaderResource.h
Applications/TempRenderer/Scene/: LightSceneNode.cpp  LightSceneNode.h  ModelSceneNode.cpp  ModelSceneNode.h  Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SceneGraphVisitor.cpp  SceneGraphVisitor.h  SceneNode.cpp  SceneNode.h  SceneNodeVisitor.cpp  SceneNodeVisitor.h  TransformNode.cpp  TransformNode.h
Applications/TempRenderer/Techniques/: ForwardRendering.cpp  ForwardRendering.h
Applications/TempVulkanRenderer/: CMakeLists.txt  main.cpp
Code/Include/: Proto.h
Code/Include/AI/GeneticAlgorithm/: Gene.h  Genome.h  Selection.h
Code/Include/Graphics/: EVertexFormat.h  Light.h  Material.h  Mesh.h  Model.h  RenderPass.h  Renderer.h  RenderingTechnique.h
Code/Include/Graphics/API/: Defines.h  Descriptors.h  Enums.h  GFX.h  GFXIncludes.h  Handles.h  Translators.h
Code/Include/Graphics/Helpers/: CreateGeometry.h
Code/Include/Graphics/RenderPasses/: OpaqueRenderPass.h  RenderPasses.h  RenderTargetTransitionRenderPass.h  UIRenderPass.h  WireframeRenderPass.h
Code/Include/Graphics/Scene/: LightSceneNode.h  ModelSceneNode.h  Scene.h  SceneGraph.h  SceneGraphVisitor.h  SceneNode.h  SceneNodeVisitor.h  SceneNodes.h  TransformNode.h
Code/Include/Graphics/Techniques/: ForwardRendering.h
Code/Include/Graphics/Viewer/: Camera.h  (+9 more)
Code/Include/IO/: IInputHandler.h  IKeyboardInputHandler.h  IMouseInputHandler.h
Code/Include/Math/: AABB.h  ASin.h  Arccos.h  Atan2.h  Clamp.h  Color.h  Constants.h  Cos.h  DegToRad.h  Dimension.h  EHandedness.h  ERotationMultiplicationOrder.h  ESpace.h  EUnit.h  IInterpolator.h  Matrix4.h  Max.h  Min.h  Quaternion.h  RadToDeg.h  Sin.h  TanH.h  Trigonometry.h  Vector2.h  Vector3.h  Vector4.h  Wrap.h
Code/Include/Memory/: CreateMemoryPool.h  EAllocator.h  EMechanism.h  IAllocator.h  IMemoryPool.h  Memory.h  MemoryChunk.h  MemoryPool.h
Code/Include/Platform/: CommandLine.h  CommandLineParser.h  EKeyCode.h  EWindowState.h  IApplication.h  KeyEvent.h  MouseEvent.h  PlatformIncludes.h  Window.h  WindowParameters.h
Code/Include/Resources/: BaseLoader.h  EResourceType.h  ResourceManager.h
Code/Include/Utility/: Array2D.h  Array3D.h  AutoPointer.h  BasicString.h  ClearContainerContents.h  ConcurrentQueue.h  ConsoleLogger.h  ENoInit.h  FixedString.h  FunctorFiveParameters.h  FunctorFourParameters.h  FunctorHelperFunctions.h  FunctorNoParameters.h  FunctorOneParameter.h  FunctorStore.h  FunctorThreeParameters.h  FunctorTwoParameters.h  Functors.h  Handle.h  HashFunctions.h  HashedString.h  IUpdatable.h  LexicalCast.h  List.h  Logger.h  NoCopy.h  ParameterList.h  Sleep.h  Stopwatch.h  String.h  TokenizeString.h  UnionCast.h  UpdateEvent.h  Vector.h  WideString.h
Code/Source/Graphics/: Light.cpp  Mesh.cpp  Model.cpp  RenderPass.cpp  Renderer.cpp  RenderingTechnique.cpp
Code/Source/Math/: Color.cpp  DegToRad.cpp  Matrix4.cpp  Quaternion.cpp  RadToDeg.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  Wrap.cpp
Code/Source/Memory/: CreateMemoryPool.cpp
Code/Source/Platform/: CommandLine.cpp  CommandLineParser.cpp  Window.cpp
Code/Source/Resources/: LoadResources.cpp  ResourceManager.cpp
Code/Source/Utility/: ConsoleLogger.cpp  FixedString.cpp  HashedString.cpp  Sleep.cpp  Stopwatch.cpp  String.cpp  TokenizeString.cpp  WideString.cpp
Data/Models/: AxisOfEvil.dae
Data/Shaders/: TempShader.shader  TempShader.txt  simpleShader.vert  texturedDiffuse.frag  texturedDiffuse.vert
Libraries/: CMakeLists.txt
Libraries/AI/: CMakeLists.txt
Libraries/Graphics/: CMakeLists.txt
Libraries/Graphics/GFXAPI/: CMakeLists.txt
Libraries/Graphics/GFXAPIDX11/: CMakeLists.txt
Libraries/Graphics/GFXAPIDX12/: CMakeLists.txt
Libraries/Graphics/GFXAPIORBIS/: CMakeLists.txt
Libraries/Graphics/GFXAPIOpenGL/: CMakeLists.txt
Libraries/Graphics/GFXAPIOpenGLES/: CMakeLists.txt
Libraries/Graphics/GFXAPIPSP2/: CMakeLists.txt
Libraries/Graphics/GFXAPIVulkan/: CMakeLists.txt
Libraries/Graphics/Graphics/: CMakeLists.txt
Libraries/IO/: CMakeLists.txt
Libraries/Math/: CMakeLists.txt
Libraries/Memory/: CMakeLists.txt
Libraries/Platform/: CMakeLists.txt
Libraries/Resources/: CMakeLists.txt
Libraries/Utility/: CMakeLists.txt
Scripts/: toolchain.ORBIS.cmake  toolchain.PSP2.cmake
(+216 files in other folders)
