cmake_minimum_required(VERSION 3.9.2)
project (applications)

#include_directories(${CODE_REPOSITORY}boost_1_65_1)
#include_directories(${CODE_REPOSITORY}glm)

add_subdirectory(AI)
add_subdirectory(Graphics)
add_subdirectory(Io)
add_subdirectory(Math)
add_subdirectory(Memory)
add_subdirectory(Platform)
add_subdirectory(Utility)

#add_subdirectory(ai)
#add_subdirectory(architecture)
#add_subdirectory(audio)
#add_subdirectory(memory)
#add_subdirectory(procedural)
#add_subdirectory(resources)
#add_subdirectory(scripting)
#add_subdirectory(thirdparty)
#add_subdirectory(threading)
